--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,31 +13,31 @@
         android:theme="@style/Theme.Ecommerce"
         tools:targetApi="31">
         <activity
-            android:name=".activity.ProfileActivity"
+            android:name=".activity.user.ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.AdminUserActivity"
+            android:name=".activity.admin.AdminUserActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.CartActivity"
+            android:name=".activity.user.CartActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.AdminProductAddActivity"
+            android:name=".activity.admin.AdminProductAddActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.AdminProductActivity"
+            android:name=".activity.admin.AdminProductActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.AdminActivity"
+            android:name=".activity.admin.AdminActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.ProductDetailActivity"
+            android:name=".activity.user.ProductDetailActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.RegisterActivity"
+            android:name=".activity.user.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.SignInActivity"
+            android:name=".activity.user.SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,7 +46,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.user.MainActivity"
             android:exported="true" />
     </application>
 
